Compiler_F14051172_HW2/y.output
Grammar

    0 $accept: translation_unit $end

    1 constant: I_CONST
    2         | F_CONST

    3 primary_expression: IDENTIFIER
    4                   | constant
    5                   | STR_CONST
    6                   | '(' expression ')'
    7                   | TRUE
    8                   | FALSE

    9 postfix_expression: primary_expression
   10                   | postfix_expression '(' ')'
   11                   | postfix_expression '(' argument_expression_list ')'
   12                   | postfix_expression '.' IDENTIFIER
   13                   | postfix_expression INC_OP
   14                   | postfix_expression DEC_OP

   15 argument_expression_list: assignment_expression
   16                         | argument_expression_list ',' assignment_expression

   17 unary_expression: postfix_expression
   18                 | INC_OP unary_expression
   19                 | DEC_OP unary_expression
   20                 | unary_operator cast_expression

   21 unary_operator: '&'
   22               | '*'
   23               | '+'
   24               | '-'
   25               | '!'

   26 cast_expression: unary_expression
   27                | '(' type_name ')' cast_expression

   28 multiplicative_expression: cast_expression
   29                          | multiplicative_expression '*' cast_expression
   30                          | multiplicative_expression '/' cast_expression
   31                          | multiplicative_expression '%' cast_expression

   32 additive_expression: multiplicative_expression
   33                    | additive_expression '+' multiplicative_expression
   34                    | additive_expression '-' multiplicative_expression

   35 relational_expression: additive_expression
   36                      | relational_expression '<' additive_expression
   37                      | relational_expression '>' additive_expression
   38                      | relational_expression LE_OP additive_expression
   39                      | relational_expression GE_OP additive_expression

   40 equality_expression: relational_expression
   41                    | equality_expression EQ_OP relational_expression
   42                    | equality_expression NE_OP relational_expression

   43 and_expression: equality_expression
   44               | and_expression '&' equality_expression

   45 exclusive_or_expression: and_expression
   46                        | exclusive_or_expression '^' and_expression

   47 inclusive_or_expression: exclusive_or_expression
   48                        | inclusive_or_expression '|' exclusive_or_expression

   49 logical_and_expression: inclusive_or_expression
   50                       | logical_and_expression AND_OP inclusive_or_expression

   51 logical_or_expression: logical_and_expression
   52                      | logical_or_expression OR_OP logical_and_expression

   53 conditional_expression: logical_or_expression
   54                       | logical_or_expression '?' expression ':' conditional_expression

   55 assignment_expression: conditional_expression
   56                      | unary_expression assignment_operator assignment_expression

   57 assignment_operator: '='
   58                    | MUL_ASSIGN
   59                    | DIV_ASSIGN
   60                    | MOD_ASSIGN
   61                    | ADD_ASSIGN
   62                    | SUB_ASSIGN

   63 expression: assignment_expression
   64           | expression ',' assignment_expression

   65 declaration: type_specifier ';'
   66            | type_specifier init_declarator_list ';'

   67 init_declarator_list: init_declarator
   68                     | init_declarator_list ',' init_declarator

   69 init_declarator: declarator
   70                | declarator '=' initializer

   71 type_specifier: VOID
   72               | INT
   73               | FLOAT
   74               | BOOL
   75               | STRING

   76 specifier_qualifier_list: type_specifier specifier_qualifier_list
   77                         | type_specifier

   78 declarator: IDENTIFIER
   79           | '(' declarator ')'

   80 parameter_list: parameter_declaration
   81               | parameter_list ',' parameter_declaration

   82 parameter_declaration: type_specifier declarator
   83                      | type_specifier abstract_declarator
   84                      | type_specifier

   85 identifier_list: IDENTIFIER
   86                | identifier_list ',' IDENTIFIER

   87 type_name: specifier_qualifier_list
   88          | specifier_qualifier_list abstract_declarator

   89 abstract_declarator: '(' abstract_declarator ')'
   90                    | '(' ')'
   91                    | '(' parameter_list ')'
   92                    | abstract_declarator '(' ')'
   93                    | abstract_declarator '(' parameter_list ')'

   94 initializer: assignment_expression
   95            | string
   96            | '{' initializer_list '}'
   97            | '{' initializer_list ',' '}'

   98 string: '"' STR_CONST '"'

   99 initializer_list: initializer
  100                 | designation initializer
  101                 | initializer_list ',' initializer
  102                 | initializer_list ',' designation initializer

  103 designation: designator_list '='

  104 designator_list: designator
  105                | designator_list designator

  106 designator: '.' IDENTIFIER

  107 statement: compound_statement
  108          | expression_statement
  109          | selection_statement
  110          | iteration_statement
  111          | jump_statement

  112 compound_statement: '{' '}'
  113                   | '{' block_item_list '}'

  114 block_item_list: block_item
  115                | block_item_list block_item

  116 block_item: declaration
  117           | statement
  118           | print_func

  119 expression_statement: ';'
  120                     | expression ';'

  121 selection_statement: IF '(' expression ')' statement
  122                    | IF '(' expression ')' statement ELSE statement

  123 iteration_statement: WHILE '(' expression ')' statement
  124                    | FOR '(' expression_statement expression_statement ')' statement
  125                    | FOR '(' expression_statement expression_statement expression ')' statement
  126                    | FOR '(' declaration expression_statement ')' statement
  127                    | FOR '(' declaration expression_statement expression ')' statement

  128 jump_statement: RETURN ';'
  129               | RETURN expression ';'

  130 translation_unit: external_declaration
  131                 | translation_unit external_declaration

  132 external_declaration: function_definition
  133                     | declaration
  134                     | print_func

  135 print_func: PRINT '(' IDENTIFIER ')' ';'
  136           | PRINT '(' string ')' ';'

  137 function_definition: type_specifier id parameter_list ')' declaration_list compound_statement
  138                    | type_specifier id parameter_list ')' compound_statement
  139                    | type_specifier id identifier_list ')' declaration_list compound_statement
  140                    | type_specifier id identifier_list ')' compound_statement
  141                    | type_specifier id ')' declaration_list compound_statement
  142                    | type_specifier id ')' compound_statement

  143 id: IDENTIFIER '('

  144 declaration_list: declaration
  145                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 25
'"' (34) 98
'%' (37) 31
'&' (38) 21 44
'(' (40) 6 10 11 27 79 89 90 91 92 93 121 122 123 124 125 126 127 135
    136 143
')' (41) 6 10 11 27 79 89 90 91 92 93 121 122 123 124 125 126 127 135
    136 137 138 139 140 141 142
'*' (42) 22 29
'+' (43) 23 33
',' (44) 16 64 68 81 86 97 101 102
'-' (45) 24 34
'.' (46) 12 106
'/' (47) 30
':' (58) 54
';' (59) 65 66 119 120 128 129 135 136
'<' (60) 36
'=' (61) 57 70 103
'>' (62) 37
'?' (63) 54
'^' (94) 46
'{' (123) 96 97 112 113
'|' (124) 48
'}' (125) 96 97 112 113
error (256)
I_CONST (258) 1
F_CONST (259) 2
STR_CONST (260) 5 98
IDENTIFIER (261) 3 12 78 85 86 106 135 143
INC_OP (262) 13 18
DEC_OP (263) 14 19
LE_OP (264) 38
GE_OP (265) 39
EQ_OP (266) 41
NE_OP (267) 42
AND_OP (268) 50
OR_OP (269) 52
MUL_ASSIGN (270) 58
DIV_ASSIGN (271) 59
MOD_ASSIGN (272) 60
ADD_ASSIGN (273) 61
SUB_ASSIGN (274) 62
INT (275) 72
FLOAT (276) 73
VOID (277) 71
BOOL (278) 74
STRING (279) 75
IF (280) 121 122
ELSE (281) 122
WHILE (282) 123
FOR (283) 124 125 126 127
RETURN (284) 128 129
PRINT (285) 135 136
TRUE (286) 7
FALSE (287) 8
IFX (288)


Nonterminals, with rules where they appear

$accept (56)
    on left: 0
constant (57)
    on left: 1 2, on right: 4
primary_expression (58)
    on left: 3 4 5 6 7 8, on right: 9
postfix_expression (59)
    on left: 9 10 11 12 13 14, on right: 10 11 12 13 14 17
argument_expression_list (60)
    on left: 15 16, on right: 11 16
unary_expression (61)
    on left: 17 18 19 20, on right: 18 19 26 56
unary_operator (62)
    on left: 21 22 23 24 25, on right: 20
cast_expression (63)
    on left: 26 27, on right: 20 27 28 29 30 31
multiplicative_expression (64)
    on left: 28 29 30 31, on right: 29 30 31 32 33 34
additive_expression (65)
    on left: 32 33 34, on right: 33 34 35 36 37 38 39
relational_expression (66)
    on left: 35 36 37 38 39, on right: 36 37 38 39 40 41 42
equality_expression (67)
    on left: 40 41 42, on right: 41 42 43 44
and_expression (68)
    on left: 43 44, on right: 44 45 46
exclusive_or_expression (69)
    on left: 45 46, on right: 46 47 48
inclusive_or_expression (70)
    on left: 47 48, on right: 48 49 50
logical_and_expression (71)
    on left: 49 50, on right: 50 51 52
logical_or_expression (72)
    on left: 51 52, on right: 52 53 54
conditional_expression (73)
    on left: 53 54, on right: 54 55
assignment_expression (74)
    on left: 55 56, on right: 15 16 56 63 64 94
assignment_operator (75)
    on left: 57 58 59 60 61 62, on right: 56
expression (76)
    on left: 63 64, on right: 6 54 64 120 121 122 123 125 127 129
declaration (77)
    on left: 65 66, on right: 116 126 127 133 144 145
init_declarator_list (78)
    on left: 67 68, on right: 66 68
init_declarator (79)
    on left: 69 70, on right: 67 68
type_specifier (80)
    on left: 71 72 73 74 75, on right: 65 66 76 77 82 83 84 137 138
    139 140 141 142
specifier_qualifier_list (81)
    on left: 76 77, on right: 76 87 88
declarator (82)
    on left: 78 79, on right: 69 70 79 82
parameter_list (83)
    on left: 80 81, on right: 81 91 93 137 138
parameter_declaration (84)
    on left: 82 83 84, on right: 80 81
identifier_list (85)
    on left: 85 86, on right: 86 139 140
type_name (86)
    on left: 87 88, on right: 27
abstract_declarator (87)
    on left: 89 90 91 92 93, on right: 83 88 89 92 93
initializer (88)
    on left: 94 95 96 97, on right: 70 99 100 101 102
string (89)
    on left: 98, on right: 95 136
initializer_list (90)
    on left: 99 100 101 102, on right: 96 97 101 102
designation (91)
    on left: 103, on right: 100 102
designator_list (92)
    on left: 104 105, on right: 103 105
designator (93)
    on left: 106, on right: 104 105
statement (94)
    on left: 107 108 109 110 111, on right: 117 121 122 123 124 125
    126 127
compound_statement (95)
    on left: 112 113, on right: 107 137 138 139 140 141 142
block_item_list (96)
    on left: 114 115, on right: 113 115
block_item (97)
    on left: 116 117 118, on right: 114 115
expression_statement (98)
    on left: 119 120, on right: 108 124 125 126 127
selection_statement (99)
    on left: 121 122, on right: 109
iteration_statement (100)
    on left: 123 124 125 126 127, on right: 110
jump_statement (101)
    on left: 128 129, on right: 111
translation_unit (102)
    on left: 130 131, on right: 0 131
external_declaration (103)
    on left: 132 133 134, on right: 130 131
print_func (104)
    on left: 135 136, on right: 118 134
function_definition (105)
    on left: 137 138 139 140 141 142, on right: 132
id (106)
    on left: 143, on right: 137 138 139 140 141 142
declaration_list (107)
    on left: 144 145, on right: 137 139 141 145


state 0

    0 $accept: . translation_unit $end

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    BOOL    shift, and go to state 4
    STRING  shift, and go to state 5
    PRINT   shift, and go to state 6

    declaration           go to state 7
    type_specifier        go to state 8
    translation_unit      go to state 9
    external_declaration  go to state 10
    print_func            go to state 11
    function_definition   go to state 12


state 1

   72 type_specifier: INT .

    $default  reduce using rule 72 (type_specifier)


state 2

   73 type_specifier: FLOAT .

    $default  reduce using rule 73 (type_specifier)


state 3

   71 type_specifier: VOID .

    $default  reduce using rule 71 (type_specifier)


state 4

   74 type_specifier: BOOL .

    $default  reduce using rule 74 (type_specifier)


state 5

   75 type_specifier: STRING .

    $default  reduce using rule 75 (type_specifier)


state 6

  135 print_func: PRINT . '(' IDENTIFIER ')' ';'
  136           | PRINT . '(' string ')' ';'

    '('  shift, and go to state 13


state 7

  133 external_declaration: declaration .

    $default  reduce using rule 133 (external_declaration)


state 8

   65 declaration: type_specifier . ';'
   66            | type_specifier . init_declarator_list ';'
  137 function_definition: type_specifier . id parameter_list ')' declaration_list compound_statement
  138                    | type_specifier . id parameter_list ')' compound_statement
  139                    | type_specifier . id identifier_list ')' declaration_list compound_statement
  140                    | type_specifier . id identifier_list ')' compound_statement
  141                    | type_specifier . id ')' declaration_list compound_statement
  142                    | type_specifier . id ')' compound_statement

    IDENTIFIER  shift, and go to state 14
    '('         shift, and go to state 15
    ';'         shift, and go to state 16

    init_declarator_list  go to state 17
    init_declarator       go to state 18
    declarator            go to state 19
    id                    go to state 20


state 9

    0 $accept: translation_unit . $end
  131 translation_unit: translation_unit . external_declaration

    $end    shift, and go to state 21
    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    BOOL    shift, and go to state 4
    STRING  shift, and go to state 5
    PRINT   shift, and go to state 6

    declaration           go to state 7
    type_specifier        go to state 8
    external_declaration  go to state 22
    print_func            go to state 11
    function_definition   go to state 12


state 10

  130 translation_unit: external_declaration .

    $default  reduce using rule 130 (translation_unit)


state 11

  134 external_declaration: print_func .

    $default  reduce using rule 134 (external_declaration)


state 12

  132 external_declaration: function_definition .

    $default  reduce using rule 132 (external_declaration)


state 13

  135 print_func: PRINT '(' . IDENTIFIER ')' ';'
  136           | PRINT '(' . string ')' ';'

    IDENTIFIER  shift, and go to state 23
    '"'         shift, and go to state 24

    string  go to state 25


state 14

   78 declarator: IDENTIFIER .
  143 id: IDENTIFIER . '('

    '('  shift, and go to state 26

    $default  reduce using rule 78 (declarator)


state 15

   79 declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 27
    '('         shift, and go to state 15

    declarator  go to state 28


state 16

   65 declaration: type_specifier ';' .

    $default  reduce using rule 65 (declaration)


state 17

   66 declaration: type_specifier init_declarator_list . ';'
   68 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 29
    ';'  shift, and go to state 30


state 18

   67 init_declarator_list: init_declarator .

    $default  reduce using rule 67 (init_declarator_list)


state 19

   69 init_declarator: declarator .
   70                | declarator . '=' initializer

    '='  shift, and go to state 31

    $default  reduce using rule 69 (init_declarator)


state 20

  137 function_definition: type_specifier id . parameter_list ')' declaration_list compound_statement
  138                    | type_specifier id . parameter_list ')' compound_statement
  139                    | type_specifier id . identifier_list ')' declaration_list compound_statement
  140                    | type_specifier id . identifier_list ')' compound_statement
  141                    | type_specifier id . ')' declaration_list compound_statement
  142                    | type_specifier id . ')' compound_statement

    IDENTIFIER  shift, and go to state 32
    INT         shift, and go to state 1
    FLOAT       shift, and go to state 2
    VOID        shift, and go to state 3
    BOOL        shift, and go to state 4
    STRING      shift, and go to state 5
    ')'         shift, and go to state 33

    type_specifier         go to state 34
    parameter_list         go to state 35
    parameter_declaration  go to state 36
    identifier_list        go to state 37


state 21

    0 $accept: translation_unit $end .

    $default  accept


state 22

  131 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 131 (translation_unit)


state 23

  135 print_func: PRINT '(' IDENTIFIER . ')' ';'

    ')'  shift, and go to state 38


state 24

   98 string: '"' . STR_CONST '"'

    STR_CONST  shift, and go to state 39


state 25

  136 print_func: PRINT '(' string . ')' ';'

    ')'  shift, and go to state 40


state 26

  143 id: IDENTIFIER '(' .

    $default  reduce using rule 143 (id)


state 27

   78 declarator: IDENTIFIER .

    $default  reduce using rule 78 (declarator)


state 28

   79 declarator: '(' declarator . ')'

    ')'  shift, and go to state 41


state 29

   68 init_declarator_list: init_declarator_list ',' . init_declarator

    IDENTIFIER  shift, and go to state 27
    '('         shift, and go to state 15

    init_declarator  go to state 42
    declarator       go to state 19


state 30

   66 declaration: type_specifier init_declarator_list ';' .

    $default  reduce using rule 66 (declaration)


state 31

   70 init_declarator: declarator '=' . initializer

    I_CONST     shift, and go to state 43
    F_CONST     shift, and go to state 44
    STR_CONST   shift, and go to state 45
    IDENTIFIER  shift, and go to state 46
    INC_OP      shift, and go to state 47
    DEC_OP      shift, and go to state 48
    TRUE        shift, and go to state 49
    FALSE       shift, and go to state 50
    '('         shift, and go to state 51
    '&'         shift, and go to state 52
    '*'         shift, and go to state 53
    '+'         shift, and go to state 54
    '-'         shift, and go to state 55
    '!'         shift, and go to state 56
    '{'         shift, and go to state 57
    '"'         shift, and go to state 24

    constant                   go to state 58
    primary_expression         go to state 59
    postfix_expression         go to state 60
    unary_expression           go to state 61
    unary_operator             go to state 62
    cast_expression            go to state 63
    multiplicative_expression  go to state 64
    additive_expression        go to state 65
    relational_expression      go to state 66
    equality_expression        go to state 67
    and_expression             go to state 68
    exclusive_or_expression    go to state 69
    inclusive_or_expression    go to state 70
    logical_and_expression     go to state 71
    logical_or_expression      go to state 72
    conditional_expression     go to state 73
    assignment_expression      go to state 74
    initializer                go to state 75
    string                     go to state 76


state 32

   85 identifier_list: IDENTIFIER .

    $default  reduce using rule 85 (identifier_list)


state 33

  141 function_definition: type_specifier id ')' . declaration_list compound_statement
  142                    | type_specifier id ')' . compound_statement

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    BOOL    shift, and go to state 4
    STRING  shift, and go to state 5
    '{'     shift, and go to state 77

    declaration         go to state 78
    type_specifier      go to state 79
    compound_statement  go to state 80
    declaration_list    go to state 81


state 34

   82 parameter_declaration: type_specifier . declarator
   83                      | type_specifier . abstract_declarator
   84                      | type_specifier .

    IDENTIFIER  shift, and go to state 27
    '('         shift, and go to state 82

    $default  reduce using rule 84 (parameter_declaration)

    declarator           go to state 83
    abstract_declarator  go to state 84


state 35

   81 parameter_list: parameter_list . ',' parameter_declaration
  137 function_definition: type_specifier id parameter_list . ')' declaration_list compound_statement
  138                    | type_specifier id parameter_list . ')' compound_statement

    ')'  shift, and go to state 85
    ','  shift, and go to state 86


state 36

   80 parameter_list: parameter_declaration .

    $default  reduce using rule 80 (parameter_list)


state 37

   86 identifier_list: identifier_list . ',' IDENTIFIER
  139 function_definition: type_specifier id identifier_list . ')' declaration_list compound_statement
  140                    | type_specifier id identifier_list . ')' compound_statement

    ')'  shift, and go to state 87
    ','  shift, and go to state 88


state 38

  135 print_func: PRINT '(' IDENTIFIER ')' . ';'

    ';'  shift, and go to state 89


state 39

   98 string: '"' STR_CONST . '"'

    '"'  shift, and go to state 90


state 40

  136 print_func: PRINT '(' string ')' . ';'

    ';'  shift, and go to state 91


state 41

   79 declarator: '(' declarator ')' .

    $default  reduce using rule 79 (declarator)


state 42

   68 init_declarator_list: init_declarator_list ',' init_declarator .

    $default  reduce using rule 68 (init_declarator_list)


state 43

    1 constant: I_CONST .

    $default  reduce using rule 1 (constant)


state 44

    2 constant: F_CONST .

    $default  reduce using rule 2 (constant)


state 45

    5 primary_expression: STR_CONST .

    $default  reduce using rule 5 (primary_expression)


state 46

    3 primary_expression: IDENTIFIER .

    $default  reduce using rule 3 (primary_expression)


state 47

   18 unary_expression: INC_OP . unary_expression

    I_CONST     shift, and go to state 43
    F_CONST     shift, and go to state 44
    STR_CONST   shift, and go to state 45
    IDENTIFIER  shift, and go to state 46
    INC_OP      shift, and go to state 47
    DEC_OP      shift, and go to state 48
    TRUE        shift, and go to state 49
    FALSE       shift, and go to state 50
    '('         shift, and go to state 92
    '&'         shift, and go to state 52
    '*'         shift, and go to state 53
    '+'         shift, and go to state 54
    '-'         shift, and go to state 55
    '!'         shift, and go to state 56

    constant            go to state 58
    primary_expression  go to state 59
    postfix_expression  go to state 60
    unary_expression    go to state 93
    unary_operator      go to state 62


state 48

   19 unary_expression: DEC_OP . unary_expression

    I_CONST     shift, and go to state 43
    F_CONST     shift, and go to state 44
    STR_CONST   shift, and go to state 45
    IDENTIFIER  shift, and go to state 46
    INC_OP      shift, and go to state 47
    DEC_OP      shift, and go to state 48
    TRUE        shift, and go to state 49
    FALSE       shift, and go to state 50
    '('         shift, and go to state 92
    '&'         shift, and go to state 52
    '*'         shift, and go to state 53
    '+'         shift, and go to state 54
    '-'         shift, and go to state 55
    '!'         shift, and go to state 56

    constant            go to state 58
    primary_expression  go to state 59
    postfix_expression  go to state 60
    unary_expression    go to state 94
    unary_operator      go to state 62


state 49

    7 primary_expression: TRUE .

    $default  reduce using rule 7 (primary_expression)


state 50

    8 primary_expression: FALSE .
